seconnd commit by test user2_for example

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,4 +6,4 @@
 appTitle=Demo Project for BAS GIT setup
 
 #YDES: Application description
-appDescription=A Fiori application.
+appDescription= Test the GIT project clone.
